# numpy-nn-model

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  activations.py  ae.py  autograd.py  classifier.py  containers.py  data_loader.py  gan.py  gan_trainer.py  import_mnist_data.py  losses.py  mnist_data_downloader.py  multi30k_data_downloader.py  nn.py  nn_model.py  optim.py  pyproject.toml  requirements.txt  sequences_classifier.py  test.py  test2.py  test4.py  test5.py  test6.py  torch_ae.py  torch_gan.py  torch_sequences_classifier.py  vae.py  vae_trainer.py
Layers/: batch_norm.py  conv2d.py  conv2d_deprecated.py  dropout.py  flatten.py  lstm.py  repeat_vector.py  reshape.py  rnn.py  test.py  upsampling.py
NNModel/: __init__.py  activations.py  error_handler.py  loss_functions.py  nn_model.py  values_checker.py
Simple Classifier/: topology.npy  weights.npz
dataset/: readme.txt
examples/: 2d_latent_dim_variational_autoencoder.py  ae.ipynb  ae.py  approximator.py  autoencoder.py  bidirectional_recurrent_digits_classifier.py  classifier.py  convolutional_digits_classifier.ipynb  convolutional_digits_classifier.py  conway.ipynb  conway.py  ddpm.ipynb  ddpm.py  gan.ipynb  gan.py  generative_adversarial_network.py  gpt.ipynb  gpt.py  optimizers_visualization.ipynb  optimizers_visualization.py  recurrent_digits_classifier.ipynb  recurrent_digits_classifier.py  recurrent_sequences_classifier.ipynb  recurrent_sequences_classifier.py  seq2seq.ipynb  seq2seq.py  sequences_classifier.py  simple_autoencoder.py  transformer.py  vae.ipynb  vae.py  variational autoencoder.py  variational_autoencoder.py  vqvae.ipynb  vqvae.py  word2vec.ipynb  word2vec.py
layers/: avgpool2d.py  batchnorm1d.py  batchnorm2d.py  bidirectional.py  conv2d.py  convtranspose2d.py  dropout.py  embedding.py  flatten.py  gru.py  layernorm.py  linear.py  lstm.py  maxpool2d.py  rnn.py  zeropad2d.py
neunet/: __init__.py  autograd.py  optim.py
nnmodel/: __init__.py  activations.py  loss_functions.py  losses.py  nn_model.py  optimizers.py
patches/: cutlass_gemm_universal.patch
saved models/: convolutional_digits_classifier
scripts/: benchmark_linear_swish_all_plot.py  benchmark_linear_swish_cuda.py  benchmark_swiglu_all_plot.py  benchmark_swish_cuda.py  profile_adam.py  torch_classifier.py  torch_ddpm.py  torch_gan.py  torch_seq2seq.py  torch_sequences_classifier.py  torch_vae.py
tests/: test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test_crossentropyloss_cpu.py  test_crossentropyloss_cuda.py  test_fused_swish_and_mul_cuda.py  test_fusedadamw_cuda.py  test_init_api_wrappers.py  test_layernorm_cpu.py  test_linear_cuda.py  test_linear_cutlass.py  test_mean_var_cpu.py  (+12 more)
(+154 files in other folders)
